--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,9 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 .credits {
   position: absolute;
   bottom: 1rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
   color: #e0c4a8;
+  margin-bottom: 2rem;
 }
 
 .bg-g-blue-green {
@@ -54,7 +55,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 .footer {
   background-color: #245724;
   background-image: linear-gradient(150deg, #1b3c5b, #103b10);
-  height: 8rem;
+  height: 10rem;
   position: relative;
 }
 
@@ -172,11 +173,15 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
   .grid-2-1-artists {
     grid-template-columns: 1fr;
     grid-row-gap: 0.3%;
-    width: 90%;
+    width: 95%;
+  }
+  .norgesferie-cover {
+    width: 25rem;
+    margin-bottom: 3rem;
   }
   .box-description { grid-column: 1/2; }
 }
