--- a/docs/styles.css
+++ b/docs/styles.css
@@ -34,7 +34,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 
 .credits {
   position: absolute;
-  bottom: 1rem;
+  bottom: 3rem;
   font-size: 1rem;
   color: #e0c4a8;
   margin-bottom: 2rem;
@@ -50,7 +50,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 .footer {
   background-color: #245724;
   background-image: linear-gradient(150deg, #1b3c5b, #103b10);
-  height: 10rem;
+  height: 12rem;
   position: relative;
 }
 
@@ -69,8 +69,6 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   box-shadow: 0 0 15px #ede1db;
   cursor: pointer;
 }
-
-.main-container { overflow: auto; }
 
 .text-normal {
   font-size: 1.3rem;
@@ -173,6 +171,9 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
     grid-template-columns: 1fr;
     grid-row-gap: 0.3%;
     width: 95%;
+  }
+  html {
+    font-size: 2rem;
   }
   .norgesferie-cover {
     width: 25rem;
