--- a/docs/styles.css
+++ b/docs/styles.css
@@ -4,6 +4,7 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
 }
 
 a {
@@ -177,7 +178,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
     font-size: 2rem;
   }
   .norgesferie-cover {
-    width: 25rem;
+    width: 20rem;
     margin-bottom: 3rem;
   }
   .box-description { grid-column: 1/2; }
