--- a/docs/styles.css
+++ b/docs/styles.css
@@ -21,6 +21,8 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 
 .margin-bottom { margin-bottom: 3rem; }
 
+.margin-bottom-r { margin-bottom: 4rem; }
+
 .social-media-icon {
   width: 2.5rem;
   margin: 0 0.5rem 1rem 0;
@@ -73,7 +75,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 
 .text-normal {
   font-size: 1.3rem;
-  padding: 0 0 1rem 0;
+  padding-bottom: 2rem;
 }
 
 .grid-2-1-description {
@@ -169,9 +171,6 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   .margin-bottom {
     margin-bottom: 2rem;
   }
-}
-
-@media only screen and (max-width: 1000px) {
   .norgesferie-cover {
     width: 10rem;
     margin-bottom: 3rem;
