Change title font

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,7 @@
 body, html {
   color: #f2ece4;
-  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -10,7 +11,6 @@ body, html {
 a {
   color: #f2ece4;
   width: 0;
-  z-index: 10;
 }
 
 p { margin: 0; }
@@ -26,7 +26,8 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 .social-media-icon {
   width: 2.5rem;
   margin: 0 0.5rem 1rem 0;
-  filter: invert(95%);
+  -webkit-filter: invert(95%);
+          filter: invert(95%);
 }
 
 .footer-icons {
@@ -134,7 +135,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 .title {
   color: #e0c4a8;
   font-size: 2.5rem;
-  font-family: 'Amaranth', sans-serif;
+  /* font-family: 'Amaranth', sans-serif; */
   text-shadow: 0 0 5px black;
 }
 
@@ -180,7 +181,6 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
     height: 15rem;
   }
   .footer-icons {
-    position: absolute;
     left: 1rem;
     top: 6rem;
   }
