--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,6 +5,7 @@ body, html {
   padding: 0;
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -12,11 +13,27 @@ a {
   width: 0;
 }
 
+#box-competition-teaser {
+  background-color: #103b10;
+  background-image: linear-gradient(150deg, #1b3c5b, #103b10);
+  border-radius: 5px;
+  font-size: 1.3rem;
+  grid-column: 1/3;
+  padding: 1rem;
+  margin-top: -1rem;
+  height: auto;
+  width: 50%;
+  justify-self: center;
+  text-align: center;
+  text-decoration: none;
+}
+
 p { margin: 0; }
 
-#description-title { grid-column: 1/3; }
-
-a:hover { text-shadow: 0 0 15px #ede1db; }
+#description-title, #competition-title {
+  grid-column: 1/3;
+  justify-self: center;
+}
 
 .margin-bottom { margin-bottom: 3rem; }
 
@@ -44,14 +61,14 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 }
 
 .bg-g-blue-green {
-  background-color: #206220;
+  background-color: #245724;
   background-image: linear-gradient(150deg, #296fb0, #245724);
 }
 
 .box-shadow { box-shadow: 0 0 10px #0c1926; }
 
 .footer {
-  background-color: #245724;
+  background-color: #103b10;
   background-image: linear-gradient(150deg, #1b3c5b, #103b10);
   height: 10rem;
   position: relative;
@@ -65,17 +82,16 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 }
 
 .norgesferie-cover {
-  width: 14rem;
+  width: 12rem;
 }
 
-.norgesferie-cover:hover {
-  box-shadow: 0 0 15px #ede1db;
+.norgesferie-cover > img:hover, #box-competition-teaser:hover {
+  box-shadow: 0 0 10px 2px #ede1db;
   cursor: pointer;
 }
 
 .text-normal {
   font-size: 1.3rem;
-  padding-bottom: 2rem;
 }
 
 .grid-2-1-description {
@@ -93,6 +109,14 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   grid-row-gap: 1%;
   grid-column-gap: 1%;
 }
+/*
+.grid-competition {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: auto;
+  grid-row-gap: 1%;
+  grid-column-gap: 1%;
+} */
 
 .box-container {
   margin: 0 auto;
@@ -133,7 +157,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
 
 .title {
   color: #e0c4a8;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   text-shadow: 0 0 5px black;
 }
 
@@ -142,6 +166,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   font-size: 2rem;
   padding: 0.5rem 0 1rem 0;
   margin: 0;
+  text-shadow: 0 0 5px black;
 }
 
 .background-image {
@@ -151,11 +176,27 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   background-attachment: fixed;
   background-size: cover;
   background-color: white;
+  padding-bottom: 1rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.thief-img {
+  width: 40%;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 /* Responsive */
 
 @media only screen and (max-width: 1200px) {
+  #box-competition-teaser {
+    grid-column: 1/2;
+    width: auto;
+    margin: -2rem 0 3rem 0;
+  }
   #description-title {
     grid-column: 1/2;
   }
@@ -171,8 +212,7 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
     margin-bottom: 2rem;
   }
   .norgesferie-cover {
-    width: 10rem;
-    margin-bottom: 3rem;
+    justify-self: center;
   }
   .box-description { grid-column: 1/2; }
   .footer {
@@ -181,5 +221,8 @@ a:hover { text-shadow: 0 0 15px #ede1db; }
   .footer-icons {
     left: 1rem;
     top: 6rem;
+  }
+  .thief-img {
+    width: 70%;
   }
 }
