--- a/docs/styles.css
+++ b/docs/styles.css
@@ -85,9 +85,13 @@ p { margin: 0; }
   width: 12rem;
 }
 
-.norgesferie-cover > img:hover, #box-competition-teaser:hover {
+.norgesferie-cover > img:hover,
+#box-competition-teaser:hover,
+.thief-img:hover
+ {
   box-shadow: 0 0 10px 2px #ede1db;
   cursor: pointer;
+  transition: 0.2s;
 }
 
 .text-normal {
@@ -189,9 +193,71 @@ p { margin: 0; }
   margin-right: 2rem;
 }
 
+/* Modal */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 800px;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  font-size: 3rem;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Responsive */
 
 @media only screen and (max-width: 1200px) {
+  .modal-content {
+    width: 100%;
+  }
   #box-competition-teaser {
     grid-column: 1/2;
     width: auto;
