--- a/docs/styles.css
+++ b/docs/styles.css
@@ -14,8 +14,8 @@ a {
 }
 
 #box-competition-teaser {
-  background-color: #103b10;
-  background-image: linear-gradient(150deg, #1b3c5b, #103b10);
+  background-color: #32127d;
+  background-image: linear-gradient(150deg, #904d0d, #32127d);
   border-radius: 5px;
   font-size: 1.3rem;
   grid-column: 1/3;
@@ -93,8 +93,6 @@ p { margin: 0; }
   box-shadow: 0 0 10px 2px #c8d1d9;
   cursor: pointer;
   transition: 0.2s;
-  -webkit-filter: hue-rotate(-20deg);
-          filter: hue-rotate(-20deg);
 }
 
 .text-normal {
