--- a/docs/styles.css
+++ b/docs/styles.css
@@ -188,7 +188,7 @@ p { margin: 0; }
 
 .box-wyng {
   border: 1px solid white;
-  padding-bottom: -2rem;
+  margin-bottom: -2rem;
   width: auto;
 }
 
