Probably final commit

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -56,7 +56,7 @@ p { margin: 0; }
   position: absolute;
   bottom: 1.5rem;
   font-size: 1rem;
-  color: #e0c4a8;
+  color: #f2ece4;
   margin-bottom: 2rem;
 }
 
